# archGL_engine

./: CMakeLists.txt  README.md
include/: engine.h  geometry.h  main.h  main.hpp  shader.h  types.h  window.h
include/glad/: glad.h
shader/: shader.fs  shader.vs
src/: glad.c  main.cpp
src/engine/: engine.cpp
src/geometry/: geometry_obj.cpp
src/shader/: shader.cpp
src/windowing/: window.cpp
